Refactor component imports to use relative paths

--- a/要件定義.md
+++ b/要件定義.md
@@ -18,6 +18,9 @@
  *
  * ・スタイリング:
  *   - Tailwind CSS v4 のみを使用し、color-scales.css にあるカラーパレットに沿って実装する
+ *   - バリアントの実装には tailwind-variants を使用する（class-variance-authority は使用しない）
+ *   - クラス名の結合には cn.ts を使用する（utils.ts は使用しない）
+ *   - color-scales.css で定義されていない色は使用しない
  *
  * ・Storybook:
  *   - 各コンポーネントの使用例を Storybook 上で確認できるようにする
